objects/BMCServiceDesk__BMC_IPEndpoint__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__AddressType__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPv4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPv6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DNSHostName__c</fullName>
        <label>DNS Host Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ManagementAddress__c</fullName>
        <label>Management Address</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PrefixLength__c</fullName>
        <label>Prefix Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SubnetMask__c</fullName>
        <label>Subnet Mask</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>